# cpt-gef-txt-reader

./: .coverage  .gitignore  LICENSE  README.md  example_usage.py  gef_parser.py  pyproject.toml  sample_cptu_file.GEF.txt
data/: example_cptu_data_1.txt
docs/: example_usage.py
src/: example_usage.py  gef_parser.py
src/gef_reader/: __init__.py  gef_parser.py  gef_reader.py  models.py
src/utils/: pytess_main.py
tests/: example_usage.py  hello.py  helper_functions.py  test_gef_parser.py  test_reader.pybu
